<resources>
    <string name="app_name">CartMart</string>
    <string name="app_tagline">Mobile shop client for CartMartBD</string>
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to browse products, manage cart items, and place orders.</string>
    <string name="register_title">Create an account</string>
    <string name="register_label">Register</string>
    <string name="login_label">Login</string>
    <string name="products_label">Products</string>
    <string name="cart_label">Cart</string>
    <string name="cart_label_with_count">Cart (%1$d)</string>
    <string name="orders_label">Orders</string>
    <string name="admin_label">Admin</string>
</resources>